[project]
name = "rcl-market-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.0.2",
    "packaging==26.0",
    "pandas==2.2.2",
    "patsy==1.0.2",
    "pyblp==1.1.2",
    "scipy==1.16.3",
    "sympy==1.14.0",
]
